# Propaganda-spread-model

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: ColorPalette.hpp  Constants.hpp  GridWidget.hpp  MainWindow.hpp  Model.hpp  PlayerControlWidget.hpp  Simulation.hpp  SimulationControlWidget.hpp  SimulationResults.hpp  StatsWidget.hpp  Types.hpp  UiUtils.hpp  UsMap.hpp  WorldPhysicsWidget.hpp
src/: Constants.cpp  GridWidget.cpp  MainWindow.cpp  PlayerControlWidget.cpp  Simulation.cpp  SimulationControlWidget.cpp  StatsWidget.cpp  UsMap.cpp  WorldPhysicsWidget.cpp  main.cpp
